# MyFinances

./: .gitignore  CMakeLists.txt  brief.md  build.gradle  settings.gradle
app/: build.gradle  google-services.json
app/apk/: app-debug.apk
app/src/androidTest/java/com/example/myfinances2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myfinances2/: AddCategoryActivity.java  HistoryActivity.java  HistoryListAdapter.java  MainActivity.java  StatisticsActivity.java
app/src/main/java/com/example/myfinances2/db/: DatabaseHelper.java
app/src/main/java/com/example/myfinances2/model/: Category.java  History.java  HistoryRecord.java
app/src/main/res/layout/: activity_add_category.xml  activity_history.xml  activity_main.xml  activity_statistics.xml  adapter_view_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myfinances2/: ExampleUnitTest.java
prezentacja/: prezentacja.odt
source/: MainViewController.cpp
